--- a/style.css
+++ b/style.css
@@ -75,11 +75,15 @@ body * {
   z-index: 1;
   transform: translateY(-50%);
   cursor: pointer;
+  animation: slide-out 0.3s;
 }
 
 .light #switch button {
-  right: 0;
-  left: initial ;
+  animation: slide-in 0.3s forwards;
+}
+
+#switch button:hover{
+  outline: 8px solid (var(--highlight-color));
 }
 
 #switch span {
@@ -151,4 +155,22 @@ ul li a:hover {
 footer {
   padding: 24px 0;
   text-align: center;
+}
+
+@keyframes slide-in {
+  from{
+  left:0;
+  }
+  to{
+  left:50%;  
+  }
+}
+
+@keyframes slide-out {
+  from{
+  left:50%;
+  }
+  to{
+  left:0%;  
+  }
 }
